--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     },
     "browserslist": {
         "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
+            "> 0.5%",
+            "last 2 versions",
+            "not dead"
         ],
         "development": [
             "last 1 chrome version",
