--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "todo-app",
     "version": "0.1.0",
     "private": true,
+    "homepage": "./",
     "dependencies": {
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^11.2.7",
@@ -13,7 +14,6 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
-        "react-transition-group": "^4.4.2",
         "web-vitals": "^1.1.2"
     },
     "scripts": {
