--- a/package.json
+++ b/package.json
@@ -1,59 +1,21 @@
 {
     "name": "todo-app",
     "version": "0.1.0",
-    "private": true,
-    "homepage": "./",
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
-        "css-loader": "^6.2.0",
-        "patch-package": "^6.4.7",
-        "postcss": "^8.3.6",
-        "postcss-loader": "^6.1.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-scripts": "4.0.3",
-        "web-vitals": "^1.1.2"
-    },
+    "browserslist": "cover 99.5%",
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "lint": "./node_modules/.bin/stylelint \"**/*.css\""
+        "start": "vite",
+        "build": "vite build",
+        "preview": "vite preview"
     },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            "> 0.5%",
-            "last 2 versions",
-            "not dead"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+    "dependencies": {
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2"
     },
     "devDependencies": {
-        "stylelint": "^13.13.1",
-        "stylelint-config-recess-order": "^2.4.0",
-        "stylelint-config-standard": "^22.0.0",
-        "stylelint-order": "^4.1.0"
-    },
-    "stylelint": {
-        "extends": [
-            "stylelint-config-standard",
-            "stylelint-config-recess-order"
-        ],
-        "rules": {
-            "indentation": 4
-        }
+        "postcss-preset-env": "^7.3.1",
+        "vite": "^2.7.2",
+        "@vitejs/plugin-react": "^1.1.4",
+        "@vitejs/plugin-legacy": "^1.6.4",
+        "@svgr/rollup": "^6.2.1"
     }
 }
