--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     },
     "dependencies": {
         "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
+        "redux": "^4.1.2"
     },
     "devDependencies": {
-        "postcss-preset-env": "^7.3.1",
-        "vite": "^2.7.2",
-        "@vitejs/plugin-react": "^1.1.4",
+        "@svgr/rollup": "^6.2.1",
         "@vitejs/plugin-legacy": "^1.6.4",
-        "@svgr/rollup": "^6.2.1"
+        "@vitejs/plugin-react": "^1.1.4",
+        "postcss-preset-env": "^7.3.1",
+        "vite": "^2.7.2"
     }
 }
