--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "todo-app",
     "version": "0.1.0",
-    "browserslist": "cover 99.5%",
+    "browserslist": ["cover 99.5%"],
     "scripts": {
         "start": "vite",
         "build": "vite build",
@@ -16,10 +16,14 @@
     },
     "devDependencies": {
         "@svgr/rollup": "^6.2.1",
+        "@tsconfig/recommended": "^1.0.1",
+        "@types/lodash": "^4.14.179",
         "@vitejs/plugin-legacy": "^1.6.4",
         "@vitejs/plugin-react": "^1.1.4",
         "postcss": "^8.4.6",
         "postcss-preset-env": "^7.3.1",
-        "vite": "^2.7.2"
+        "typescript": "^4.5.5",
+        "vite": "^2.7.2",
+        "vite-plugin-checker": "^0.4.2"
     }
 }
